--- a/newtab.html
+++ b/newtab.html
@@ -1,48 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Scott’s Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <!-- Redirect instantly to your hosted dashboard -->
+  <meta http-equiv="refresh" content="0; url=https://sco314.github.io/extensiondashboard/">
+  <title>Loading dashboard…</title>
+  <style>
+    body { margin:0; display:grid; place-items:center; height:100vh; font:14px system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:#333; }
+    a { color:inherit; }
+  </style>
 </head>
 <body>
-  <header> ... (your icons + search) ... </header>
-
-  <main class="twoCol">
-    <!-- LEFT: Calendar -->
-    <section class="card card--cal">
-      <div class="clip-cal">
-        <iframe
-          src="https://calendar.google.com/calendar/embed?mode=AGENDA
-&showTitle=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0
-&ctz=America/Chicago
-&src=family06209881962121678018%40group.calendar.google.com
-&src=ssandvik%40hisd.com
-&src=hisd.com_04q8b9un48sev80re8j233gv8o%40group.calendar.google.com
-&src=hisd.com_q5rbp2mpgnq11c6if725s7mtto%40group.calendar.google.com">
-        </iframe>
-        <div class="cal-mask-right"></div>
-        <div class="cal-mask-bottom"></div>
-      </div>
-    </section>
-
-    <!-- RIGHT: Weather -->
-    <section class="card card--wx">
-      <!-- Option A: keep just the fallback iframe -->
-      <div class="wx-fallback-wrap">
-        <div class="wx-mask-top"></div>
-        <iframe class="wx-fallback"
-          src="https://www.google.com/search?q=weather+hallsville+tx&igu=1"
-          title="Hallsville Weather (fallback)"></iframe>
-        <div class="wx-mask-bottom"></div>
-      </div>
-
-      <!-- Option B (preferred): an empty container your JS fills -->
-      <!-- <div id="wx"></div> -->
-    </section>
-  </main>
-
-  <script src="newtab.js"></script>
+  Redirecting to your dashboard…
+  <br>
+  <a href="https://sco314.github.io/extensiondashboard/">Open it now</a>
 </body>
 </html>
